@@ -1,4 +1,4 @@
-({
+{
 	"title": "hiChannel 廣播",
 	"url": "http://hichannel.hinet.net/radio.html",
 	"category": [
@@ -353,4 +353,4 @@
 			]
 		},
 	]
-})
+}
