@@ -4,8 +4,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Taiwan Radio Tuner</title>
         <link rel="shortcut icon" type="image/x-icon" href="player.ico">
-        <link rel="stylesheet" type="text/css" href="player.css"/>
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="player.css">
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <script type="text/javascript" src="jquery.cookie.js"></script>
         <script type="text/javascript" src="jquery.timers.js"></script>
         <script type="text/javascript" src="player.js"></script>
@@ -16,9 +16,9 @@
                 <legend>Taiwan Radio Tuner</legend>
                 <select id="category"></select>
                 <select id="channel"></select>
-                <input id='control' type='button' value='▶'/>
-                <br/>
-                <input id='alarm' type='checkbox'/>Alarm:
+                <input id='control' type='button' value='▶'>
+                <br>
+                <input id='alarm' type='checkbox'>Alarm:
                 <select id="hour"></select>
                 <select id="minute"></select>
             </fieldset>
